<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/character"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#263238"
    tools:context=".ui.fagment.CharacterInfoFragment">

    <ImageView
        android:id="@+id/imageError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/im_error"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/textError"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:visibility="gone"
        android:textSize="36dp"
        android:gravity="center"
        android:fontFamily="@font/chelsea_market"
        android:text="@string/error_oops_error_occured"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageError" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/chelsea_market"
        android:gravity="center"
        android:maxLines="2"
        android:textColor="@color/white"
        android:textSize="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image"
        tools:text="Crystal Poacher ffddffff" />


    <TextView
        android:id="@+id/statusField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/status"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto_black"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintStart_toEndOf="@+id/statusField"
        app:layout_constraintTop_toTopOf="@+id/statusField"
        tools:text="Alive" />

    <TextView
        android:id="@+id/speciesField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/species"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusField" />

    <TextView
        android:id="@+id/species"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto_black"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintStart_toEndOf="@+id/speciesField"
        app:layout_constraintTop_toTopOf="@+id/speciesField"
        tools:text="Human" />

    <TextView
        android:id="@+id/genderField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/gender"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speciesField" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto_black"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintStart_toEndOf="@+id/genderField"
        app:layout_constraintTop_toTopOf="@+id/genderField"
        tools:text="Male" />

    <TextView
        android:id="@+id/originField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/origin"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderField" />

    <TextView
        android:id="@+id/origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto_black"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintStart_toEndOf="@+id/originField"
        app:layout_constraintTop_toTopOf="@+id/originField"
        tools:text="Human" />

    <TextView
        android:id="@+id/locationField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/location"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/originField" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto_black"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintStart_toEndOf="@+id/locationField"
        app:layout_constraintTop_toTopOf="@+id/locationField"
        tools:text="Male" />

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyle"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68" />


</androidx.constraintlayout.widget.ConstraintLayout>